# t1x-client

./: .gitignore  .gitmodules  README.md  cross-compile.sh  generate.bat  meson.build  sln_builder.bat  sln_structure.lua
premake/: premake5.lua  sln_structure.lua
src/client/: address_adjuster.h  address_adjuster.hpp  main.cpp  meson.build  pch.cpp  pch.h  pch.hpp  resource.h  shared.h  std_include.cpp  std_include.hpp  t1x_core.cpp  t1x_core.h
src/client/component/: fixes.cpp  imgui.cpp  movement.cpp  movement.hpp  scheduler.cpp  security.cpp  security.hpp  ui.cpp  ui.hpp  view.cpp  window.cpp
src/client/components/: cvars.cpp  discord.cpp  discord.h  fixes.cpp  imgui.cpp  imgui.h  movement.cpp  movement.h  movement.hpp  scheduler.cpp  scheduler.h  scheduler.hpp  security.cpp  security.h  security.hpp  test.cpp  ui.cpp  ui.h  ui.hpp  view.cpp  view.h  view.hpp  window.cpp  window.h  window.hpp
src/client/game/: functions.hpp  game.cpp  game.hpp  types.hpp  variables.hpp
src/client/loader/: component_loader.cpp  component_loader.h  component_loader.hpp  loader.cpp  loader.hpp
src/client/plugin/: fixes.cpp  movement.cpp  test.cpp  test.h  view.cpp  view.h
src/client/stock/: functions.cpp  functions.h  functions.hpp  game.cpp  game.hpp  types.h  types.hpp  variables.cpp  variables.h  variables.hpp
src/common/utils/: hook.cpp  memory.cpp  memory.hpp  string.cpp  string.hpp
src/utils/: _string.cpp  _string.h  hook.cpp  hook.hpp  io.cpp  io.h  nt.cpp  thread.cpp  thread.hpp
